WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173835
Invalidate WebVideoFullscreenManager when WebPage is destroyed.
https://bugs.webkit.org/show_bug.cgi?id=173835
Summary
Invalidate WebVideoFullscreenManager when WebPage is destroyed.
Jeremy Jones
Reported
2017-06-26 09:14:13 PDT
Invalidate WebVideoFullscreenManager when WebPage is destroyed.
Attachments
Patch
(7.95 KB, patch)
2017-06-26 09:17 PDT
,
Jeremy Jones
jer.noble
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(970.22 KB, application/zip)
2017-06-26 10:44 PDT
,
Build Bot
no flags
Details
Patch for landing.
(8.55 KB, patch)
2017-06-26 13:54 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-06-26 09:17:51 PDT
Created
attachment 313843
[details]
Patch
Jeremy Jones
Comment 2
2017-06-26 09:18:33 PDT
rdar://problem/32969161
Jeremy Jones
Comment 3
2017-06-26 10:36:44 PDT
Investigating media/controls/ipad/close-page-with-picture-in-picture-video-assertion-failure.html crash to see if it is related.
Build Bot
Comment 4
2017-06-26 10:44:49 PDT
Comment on
attachment 313843
[details]
Patch
Attachment 313843
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4001435
New failing tests: media/controls/ipad/close-page-with-picture-in-picture-video-assertion-failure.html
Build Bot
Comment 5
2017-06-26 10:44:50 PDT
Created
attachment 313850
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Jeremy Jones
Comment 6
2017-06-26 13:54:19 PDT
Created
attachment 313867
[details]
Patch for landing.
WebKit Commit Bot
Comment 7
2017-06-26 15:36:49 PDT
Comment on
attachment 313867
[details]
Patch for landing. Clearing flags on attachment: 313867 Committed
r218822
: <
http://trac.webkit.org/changeset/218822
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug